#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-06-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9930 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9929 released.

        * Made major adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.
          Now working end-to-end on Windows 2008 Server.


2011-06-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9928 released.

        * Made adjustments to Cygwin based installation
          code in Makefile.PL.

        * Added &persist() function for Custom Code writers.


2011-03-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9927 released.

        * Made adjustments to Cygwin based installation
          code in Makefile.PL.


2011-03-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9926 released.

        * Fixed FULL CALENDAR date issue regarding current
          month and current time.


2011-02-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9925 released.

        * Completed Windows Installer.


2011-02-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9924 released.

        * More minor fixes to bugs discovered while
          testing in OpenSolaris.

        * Implemented $host->close() for ssh connections.

        * Tested with threading - it WORKS.


2011-02-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
