@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 efc9fb5c0e35026cc937a6302a216561b68afe1d ChangeLog
+SHA1 48f93f4e502de504207f78e5c3af6120aba71825 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 003a1689432ca91c9d4d77556b871826b573fa57 MANIFEST
-SHA1 6d924dd17b34707a6a09bc7ae6398f6706ab5929 META.yml
-SHA1 c6435071fb823e5722d4705081bf78de9810b290 Makefile.PL
+SHA1 2de23de182df92637a68f0a116650790b2fc4224 META.yml
+SHA1 9a25a74034964694ac3ec1b56a70439a52aad5ea Makefile.PL
 SHA1 e489dfcbb5205900fb16909d95b4edd259ca9cbb README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4dcdd7f60f8d9218dcc0da43adf5203a5adeb467 bin/fullauto.pl
@@ -34,7 +34,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 0555e3b8ba1d5f0a1465f9b872fc0ab818243088 lib/Net/FullAuto.pm
+SHA1 6ef92c127453b0d7213adb685adcd78eac098645 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11e4d0e0d798d8c4ced869035e5802c1f2edc975 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,7 +48,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk35dRoACgkQdsVAdUjO9IloPwCfdhblkUwH0FDBNfTzoetD1+1z
-nXoAoJ6ah/LUzCcEfltgIbjjW/wdtwm7
-=AmHl
+iEYEARECAAYFAk36yGMACgkQdsVAdUjO9Ik6AgCgkfo82LpgKlN4G21pc2ZRxzKq
+528An0mCTTCyTCY1HT9p8Mr5e2I172vG
+=NQtJ
 -----END PGP SIGNATURE-----
