@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9930';
+our $VERSION='0.9931';
 
 
 use 5.005;
